# flipperzero_protobuf_py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  TODO.txt  cli_helpers.py  doc.md  example.py  flipper_base.py  flipper_gpio.py  flipper_gui.py  flipper_proto.py  flipper_protobuf.py  flipper_storage.py  flipper_sys.py  flipperzero_cmd.py  mytest.py  pyproject.toml  rebuild.sh  requirements.txt  setup.py  test_cmd.py
async_flipperzero_protobuf/: README.md  executor.py  pyproject.toml
async_flipperzero_protobuf/clients/: application_client.py  base_client.py  desktop_client.py  gpio_client.py  gui_client.py  property_client.py  protobuf_client.py  storage_client.py  system_client.py
async_flipperzero_protobuf/commands/: application_commands.py  base_command.py  desktop_commands.py  gpio_commands.py  gui_commands.py  property_commands.py  storage_commands.py  system_commands.py
async_flipperzero_protobuf/connectors/: base_connector.py  serial_connector.py
flipperzero-protobuf/: flipper_app.py
flipperzero_protobuf/: README.md  __init__.py  __main__.py  cli_helpers.py  flipperCmd.py  flipper_app.py  flipper_base.py  flipper_desktop.py  flipper_gpio.py  flipper_gui.py  flipper_property.py  flipper_proto.py  flipper_storage.py  flipper_sys.py  flipperzero_cmd.py  rebuild.sh  version.py
flipperzero_protobuf/flipperCmd/: __init__.py  __main__.py  cmd_complete.py  flipperCmd.py  flipperzero_cmd.py
flipperzero_protobuf/flipperzero_protobuf_compiled/: application_pb2.py  desktop_pb2.py  flipper_pb2.py  gpio_pb2.py  gui_pb2.py  property_pb2.py  storage_pb2.py  system_pb2.py
flipperzero_protobuf_compiled/: application_pb2.py  flipper_pb2.py  gpio_pb2.py  storage_pb2.py  system_pb2.py
